https://trello.com/c/s7xdTBGz/494-ui-header: Ensure height of collapsed menu aligned.

--- a/ckanext/bpatheme/fanstatic/styles/bpatheme.css
+++ b/ckanext/bpatheme/fanstatic/styles/bpatheme.css
@@ -566,7 +566,7 @@ body {
 
   .topnav.responsive a.icon {
     position: absolute;
-    right: 0;
+    right: -10px;
     top: 0;
   }
 
